# swarm

./: .gitignore  README.md  pom.xml
.github/workflows/: maven.yml
config/: local.json
java/: CLAUDE.md  pom.xml
java/.run/: local.run.xml
java/swarm-protocol/: pom.xml
java/swarm-runner/: pom.xml
java/swarm-runner/src/main/resources/: log4j2.xml  swarm-local.txt
java/swarm-runner/src/main/resources/admin/template/: container.template.html
rust/: Cargo.toml
rust/src/: config.rs  main.rs  message.rs  registry.rs
src/main/java/com/github/nhirakawa/swarm/: ObjectMapperWrapper.java  Runner.java  SwarmComponent.java
src/main/java/com/github/nhirakawa/swarm/concurrent/: LoggingUncaughtExceptionHandler.java  SwarmThreadFactoryFactory.java
src/main/java/com/github/nhirakawa/swarm/config/: AbstractSwarmNode.java  ConfigPath.java  ConfigValidator.java  SwarmNode.java
src/main/java/com/github/nhirakawa/swarm/dagger/: IncomingQueue.java  OutgoingQueue.java  (+1 more)
src/main/resources/: application.conf  banner.txt  logback.xml  reference.conf
swarm-netty/: pom.xml
swarm-netty/src/main/resources/: banner.txt  logback.xml  reference.conf
swarm-nio/: pom.xml
swarm-protocol/: pom.xml
swarm-protocol/src/main/resources/: reference.conf
swarm-runner/: pom.xml
swarm-runner/src/main/resources/: application.conf  cluster.conf  swarm-local-banner.txt  swarm-netty-banner.txt
swarm-runner/src/main/resources/admin/: index.html
swarm-runner/src/main/resources/admin/static/: main.css
swarm-runner/src/main/resources/admin/template/: container.template.html
(+279 files in other folders)
