[package]
name = "swarm"
version = "0.1.0"
authors = ["Nick Hirakawa <nickhirakawa@gmail.com>"]
edition = "2024"
description = "A Rust implementation of the SWIM protocol"
repository = "https://github.com/nhirakawa/swarm.git"
license = "MIT"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive", "env"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
